// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cvc amex 1`] = `
Object {
  "autoComplete": "cc-csc",
  "maxLength": 4,
  "name": "cvc",
  "onBlur": [Function],
  "onChange": [Function],
  "onFocus": [Function],
  "pattern": "[0-9]{4}",
  "placeholder": "CVC",
  "type": "text",
  "value": "",
}
`;

exports[`cvc unknown 1`] = `
Object {
  "autoComplete": "cc-csc",
  "maxLength": 4,
  "name": "cvc",
  "onBlur": [Function],
  "onChange": [Function],
  "onFocus": [Function],
  "pattern": "[0-9]{3,4}",
  "placeholder": "CVC",
  "type": "text",
  "value": "",
}
`;

exports[`cvc visa 1`] = `
Object {
  "autoComplete": "cc-csc",
  "maxLength": 3,
  "name": "cvc",
  "onBlur": [Function],
  "onChange": [Function],
  "onFocus": [Function],
  "pattern": "[0-9]{3}",
  "placeholder": "CVC",
  "type": "text",
  "value": "",
}
`;
